--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="zytheme"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="Multi-purpose Business html5 landing page">
-	<link href="assets/images/favicon/favicon.ico" rel="icon">
+	<link href="assets/images/logo/Footer-Logo.png" rel="icon">
 	<!-- Option 1: Include in HTML -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -31,7 +31,7 @@
 
 	<!-- Document Title
     ============================================= -->
-	<title>Vero | Marketing Html5 Landing Page</title>
+	<title>Melody - Muppa</title>
 </head>
 
 <body class="body-scroll">
@@ -51,7 +51,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="logo" href="index.php">
+						<a class="logo" href="/">
 							<img class="logo-dark" src="assets/images/logo/dark-logo.svg" alt="Vero Logo">
 							<img class="logo-light" src="assets/images/logo/header-logos.svg" width="35%" alt="Vero Logo">
 						</a>
@@ -193,7 +193,7 @@
 					</div>
 					<!-- .col-md-6 end -->
 					<div class="col-xs-12 col-sm-6 col-md-6 ">
-						<div class="heading heading-1 mb-60  wow fadeInUp" data-wow-duration="1s">
+						<div class="heading heading-1 mb-60 mt-40 wow fadeInUp" data-wow-duration="1s">
 							<h2 class="heading--title"><strong>The Dream Land right in your Homeland</strong></h2>
 						</div>
 						<div class="wow fadeInUp" data-wow-duration="1s">
@@ -237,7 +237,7 @@
 		
 		<!-- Feature #2
 		============================================= -->
-		<section id="feature3" class="section feature feature-2 ">
+		<section id="feature3" class="section  reverserow feature feature-2 ">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-6">
@@ -245,28 +245,28 @@
 							<h3 class=""><strong>World-class Amenities for  <br><span style="color: #93c13e;">Global Citizens</span></strong></h3>
 								<div class="row">
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Open Space.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Open Space.svg" width="80%" alt=""><br>
 									75% Open Space</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Club House.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Club House.svg" width="80%" alt=""><br>
 									Twin Clubhouses</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Indore and Outdoor Games.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Indore and Outdoor Games.svg" width="80%" alt=""><br>
 									Indoor & Outdoor Sports</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Game Zone.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Game Zone.svg" width="80%" alt=""><br>
 									Children’s Gaming Zone</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/BBQ Hall.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/BBQ Hall.svg" width="80%" alt=""><br>
 									Banquet Hall</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Yoga.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Yoga.svg" width="80%" alt=""><br>
 									Yoga / Meditation / Aerobics</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/Spa.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/Spa.svg" width="80%" alt=""><br>
 									Salon & Spa</div>
 								<div class="col-md-3 col-xs-6 icons">
-									<img src="/assets/images/icons/LifeStyle.svg" width="80%" alt=""><br>
+									<img src="assets/images/icons/LifeStyle.svg" width="80%" alt=""><br>
 									Many more lifestyle & leisure amenities</div>
 							</div>
 						</div>
@@ -295,7 +295,7 @@
 						<iframe class=" pull-right"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.506060913945!2d78.36615775939758!3d17.435476351351717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb90c93687de6d%3A0x94e9f9223a2091e0!2sMuppa%20Projects%20India%20Private%20Limited!5e0!3m2!1sen!2sin!4v1689575073596!5m2!1sen!2sin" width="100%" height="400px !important" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>
 					<!-- .col-md-6 end -->
-					<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="col-xs-12 col-sm-6 col-md-6 mt-20">
 						<div class="wow fadeInUp" data-wow-duration="1s">
 							<h3 class=""><strong>Located in Hyderabad’s <br><span style="color: #93c13e;">Futuristic Residential Hub</span></strong></h3>
 							<ul>
@@ -355,7 +355,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-3 text-center">
-						<img src="/assets/images/logo/footer -l.svg"alt="" width="65%">
+						<img src="assets/images/logo/footer -l.svg"alt="" width="65%">
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<span>Muppa’s Melody is a luxury gated community offering 2, 2.5 & 3 BHK flats. The project is spread across 8.33 acres with 7 Blocks - each rising to 17 floors each and is located at Osman Nagar, Tellapur.</span>
