--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="logo" href="/">
+						<a class="logo" href="">
 							<img class="logo-dark" src="assets/images/logo/dark-logo.svg" alt="Vero Logo">
 							<img class="logo-light" src="assets/images/logo/header-logos.svg" width="35%" alt="Vero Logo">
 						</a>
