--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<ul class="nav navbar-nav nav-pos-right navbar-left nav-split">
 							<li class="active"><a data-scroll="scrollTo" href="#slider">home</a>
 							</li>
-							<li><a data-scroll="scrollTo" href="#feature2">Amenties</a>
+							<li><a data-scroll="scrollTo" href="#feature2">Amenities</a>
 							</li>
 							<li><a data-scroll="scrollTo" href="#Location">Location</a>
 							</li>
