--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="col-xs-12 col-sm-6 col-md-5 pt-100">
 							<div class="slide--headline">The Iconic Home your Homeland is excited about.</div>
 							<div class="slide--bio">Lifestyle apartments located in the fastest growing pocket of Hyderabad.</div>
-							<div class="slide--bio"><h6 class="slide--bio"><strong>2, 2.5 & 3 BHK apartments at at Osman Nagar, Tellapur, Hyderabad. </strong><br><p style="color: #fff;" >HMDA & RERA Approved</p></h6></div>
+							<div class="slide--bio"><h6 class="slide--bio"><strong>2, 2.5 & 3 BHK apartments at <br> Osman Nagar, Tellapur, Hyderabad. </strong><br><p style="color: #fff;" >HMDA & RERA Approved</p></h6></div>
 							<!-- <div class="slide--video">
 								<a class="btn--video popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4"><i class="fa fa-play"></i>Watch Overview</a>
 							</div> -->
@@ -194,10 +194,10 @@
 					<!-- .col-md-6 end -->
 					<div class="col-xs-12 col-sm-6 col-md-6 ">
 						<div class="heading heading-1 mb-30 mt-40 wow fadeInUp" data-wow-duration="1s">
-							<h2 class="heading--title"><strong>The Dream Land right in your Homeland</strong></h2>
+							<h2 class="heading--title amen"><strong>The Dream Land right in <br> <span style="color: #93c13e;">your Homeland</span></strong></h2>
 						</div>
 						<div class="wow fadeInUp" data-wow-duration="1s">
-							<div class="row text-center">
+							<div class="row text-center ">
 								<div class="col-md-3 col-xs-6"><h2>17 <p style="color: #93c13e;">Floors</p></h2></div>
 								<div class="col-md-3 col-xs-6"><h2> 7 <p style="color: #93c13e;">Towers</p></h2></div>
 								<div class="col-md-3 col-xs-6"><h2> 8.33 <p style="color: #93c13e;">Acres</p></h2></div>
@@ -216,7 +216,7 @@
 							</div>
 							
 							
-								<p class="mt-20">Move into Towers A & B by Sep ‘23   |   Towers C, D & E are open for booking</p>
+								<p class="mt-20 amen">Move into Towers A & B by Sep ‘23   |   Towers C, D & E are open for booking</p>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
@@ -244,12 +244,12 @@
 		
 		<!-- Feature #2
 		============================================= -->
-		<section id="feature3" class="section  reverserow feature feature-2 ">
+		<section id="feature3" class="section  reverserow feature feature-2 heading">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-6">
 						<div class="wow fadeInUp" data-wow-duration="1s">
-							<h3 class=""><strong>World-class Amenities for  <br><span style="color: #93c13e;">Global Citizens</span></strong></h3>
+							<h2 class="heading--title"><strong>World-class Amenities for  <br><span style="color: #93c13e;">Global Citizens</span></strong></h2>
 								<div class="row">
 								<div class="col-md-3 col-xs-6 icons">
 									<img src="assets/images/icons/Open Space.svg" width="80%" alt=""><br>
@@ -303,8 +303,8 @@
 					</div>
 					<!-- .col-md-6 end -->
 					<div class="col-xs-12 col-sm-6 col-md-6 mt-20">
-						<div class="wow fadeInUp" data-wow-duration="1s">
-							<h3 class=""><strong>Located in Hyderabad’s <br><span style="color: #93c13e;">Futuristic Residential Hub</span></strong></h3>
+						<div class="wow fadeInUp heading" data-wow-duration="1s">
+							<h3 class="heading--title"><strong>Located in Hyderabad’s <br><span style="color: #93c13e;">Futuristic Residential Hub</span></strong></h3>
 							<ul>
 								<li>Wipro, Microsoft & Infosys - 15 min</li>
 								<li>Open Minds – A Birla School – 8 min</li>
