--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="Multi-purpose Business html5 landing page">
 	<link href="assets/images/logo/Footer-Logo.png" rel="icon">
+	
 	<!-- Option 1: Include in HTML -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -31,7 +32,7 @@
 
 	<!-- Document Title
     ============================================= -->
-	<title>Melody - Muppa</title>
+	<title>Melody - Muppa NRI</title>
 </head>
 
 <body class="body-scroll">
@@ -74,6 +75,8 @@
 			</nav>
 		</header>
 
+		
+
 		<!-- Slider #1
 		============================================= -->
 		<section id="slider" class="section slider slider-form">
@@ -81,17 +84,16 @@
 				<div class="container">
 					<div class="row row-content">
 						<div class="col-xs-12 col-sm-6 col-md-5 pt-100">
-							<div class="slide--headline">The Iconic Home your Homeland is excited about.</div>
-							<div class="slide--bio">Lifestyle apartments located in the fastest growing pocket of Hyderabad.</div>
-							<div class="slide--bio"><h6 class="slide--bio"><strong>2, 2.5 & 3 BHK apartments at <br> Osman Nagar, Tellapur, Hyderabad. </strong><br><p style="color: #fff;" >HMDA & RERA Approved</p></h6></div>
+							
+							<!-- <div class="slide--bio"><h6 class="slide--bio"><strong>2, 2.5 & 3 BHK apartments at <br> Osman Nagar, Tellapur, Hyderabad. </strong><br><p style="color: #fff;" >HMDA & RERA Approved</p></h6></div> -->
 							<!-- <div class="slide--video">
 								<a class="btn--video popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4"><i class="fa fa-play"></i>Watch Overview</a>
 							</div> -->
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-2">
-							<div class="slide--action">
+							<!-- <div class="slide--action">
 								<h6>A Home in the Homeland is Something Special.</h6>
-								<p>Fill in your details to know more about Melody.</p>
+								<p>2, 2.5 & 3 BHK apartments at <br> Osman Nagar, Tellapur, Hyderabad. </p>
 								<form class="mb-0">
 									<div>
 										<label>Name</label>
@@ -113,17 +115,26 @@
 										<input type="submit" class="btn btn--primary btn--block mt-10" value="Submit">
 									</div>
 								</form>
-							</div>
+							</div> -->
 						</div>
 					</div>
 					<!-- .row end -->
 				</div>
 				<!-- .container end -->
 			</div>
+			
 			<!-- .slide-item end -->
 		</section>
+		<div class="slider-form text--center">
+			<div class="slide--headline">The Iconic Home your Homeland is excited about.</div>
+			<div class="slide--bio">Lifestyle apartments located in the fastest growing pocket of Hyderabad.</div>
+		</div>
 		<!-- #slider end -->
-
+		<div class="icon-cta">
+			<a href="https://wa.me/919108080808/"><p><i class="bi bi-whatsapp"></i></p></a>
+			<a href="tel:9108080808"><p><i class="bi bi-telephone-fill"></i></p></a>
+			<a href="#contact"><p><i class="bi bi-person"></i></p></a>
+		</div>
 		<!-- Feature #1
 		============================================= -->
 		<section id="feature1" class="section feature feature-left bg-white">
@@ -131,7 +142,7 @@
 				<div class="heading heading-1 mb-80 text--center wow fadeInUp" data-wow-duration="1s">
 					<h2 class="heading--title"><span style="color: #93c13e;">Lush Apartments Neighbouring<br></span> Financial District & Gachibowli <br><p>@Osman Nagar, Tellapur</p></h2>
 					
-					<h3>Price starts from <span style="color: #ee8162;">₹69.10 Lakhs*</span> </h3>
+					<h3>Price starts from <span style="color: #ee8162;">₹69.10 Lakhs*</span><span style="font-size: 10px;">(T&C Apply)</span> </h3>
 				</div>
 				<div class="row">
 					<!-- Panel #1 -->
@@ -347,7 +358,7 @@
 							<input type="text" name="Query" class="form-control">
 						</div>
 						<div>
-							<input type="submit" class="btn btn--primary btn--block mt-10" value="Submit">
+							<a type="submit" href="assets/brochure.pdf" download class="btn btn--primary btn--block mt-10" >Download Brochure</a>
 						</div>
 					</form>
 				</div>
