--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							</div>
 							
 							
-								<p class="mt-20 amen">Move into Towers A & B by Sep ‘23   |   Towers C, D & E are open for booking</p>
+								<p class="mt-10 amen">Move into Towers A & B by Sep ‘23. <br>Towers C, D & E are open for booking. <br>HMDA & RERA Approved</p>
 						</div>
 					</div>
 					<!-- .col-md-6 end -->
