--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<!-- .slide-item end -->
 		</section>
 		<div class="slider-form text--center">
-			<div class="slide--headline">Invest in the future of your Homeland!</div>
+			<div class="slide--headline">Invest in the Future of your Homeland!</div>
 			<div class="slide--bio">Lifestyle apartments @ Tellapur (Osman Nagar), Hyderabad</div>
 		</div>
 		<!-- #slider end -->
